# v-support-loom

./: .env.environment.example  .gitignore  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: basic-tests.yml  staging.yml
@types/npm/: passport-intercom.d.ts
aws-lambda/: function.py
client/: env.config.js  manifest.html  theme.config.js
client/account/: App.jsx  index.js
client/base/: BaseApp.jsx  index.js
client/crisp/: CrispApp.jsx  index.js
client/css/: index.css
client/hsframe/: HsframeApp.jsx  index.js
client/videosupport/: VideosupportApp.jsx  index.js
client/zendesk/: ZendeskApp.jsx  index.js
db_migration_scripts/: create_subscriptions.py  export_collection.py  import_collection.py  main.py
etc/parcel-plugins/: manifest.js
freshdesk/: .report.json  manifest.json
freshdesk/.fdk/: store.sqlite
freshdesk/app/: index.html
freshdesk/config/: iparams.json
freshdesk/coverage/: index.html
public/translations/: de.json  en.json  fr.json  nl.json  pt.json  th.json  vi.json
server/: app.module.ts  main.ts  utils.ts
server/account/: account.controller.ts  account.module.ts  account.service.ts
server/api/: api.controller.spec.ts  api.controller.ts  api.decorator.ts  api.middleware.ts  api.module.ts  api.service.spec.ts  api.service.ts
server/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
server/base/: base.controller.ts  base.module.ts
server/config/: config.module.ts  (+2 more)
slack/: Procfile  pyproject.toml
slack/slack/: app.py
views/: page.pug
(+281 files in other folders)
