[tool.poetry]
name = "slack"
version = "0.1.0"
description = ""
authors = ["Joao Antonio Locks Justi <jjusti@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
slack-bolt = "^1.13.0"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
PyJWT = "^2.3.0"
firebase-admin = "^5.2.0"
Flask = "^2.1.1"
waitress = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
